syntax = "proto3";
package rafay.dev.types.system.v3;

import "proto/types/commonpb/v3/common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message OrganizationSpec {
  string billingAddress = 1;
  bool active = 2;
  bool approved = 3;
  string type = 4;
  string addressLine1 = 5;
  string addressLine2 = 6;
  string city = 7;
  string country = 8;
  string phone = 9;
  string state = 10;
  string zipcode = 11;
  bool isPrivate = 12;
  bool isTotpEnabled = 13;
  bool areClustersShared = 14;
}

message Organization {
  string apiVersion = 1; // default: core.rafay.dev/v3
  string kind = 2; // default: Organization
  rafay.dev.types.common.v3.Metadata metadata = 3;
  OrganizationSpec spec = 4;
  rafay.dev.types.common.v3.Status status = 5
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        title : "Status",
        description : "Status of the resource"
        read_only : true
      } ];
}

message OrganizationList {
  string apiVersion = 1;
  string kind = 2;
  rafay.dev.types.common.v3.ListMetadata metadata = 3;
  repeated Organization items = 4;
}